# OpenWAM

./: .gitmodules  CMTJLRModel.cbproj.local  CMakeLists.txt  Doxyfile.in  Icon.rc  OpenWAM.cbproj  OpenWAM.cbproj.local  OpenWAM.res  OpenWAM_XE6.cbproj  OpenWAM_XE6.cbproj.local
Source/: CMakeLists.txt  CheckXML.cpp  OpenWAM.cpp  OpenWAM.rc  TCGestorWAM.cpp  TCGestorWAM.h  TOpenWAM.cpp  TOpenWAM.h  TTimeControl.cpp  TTimeControl.h  Version.h  shock_tube_tester.cpp  version.ver
Source/1DPipes/: BasicPipe.cpp  BasicPipe.hpp  BasicPipeMethod.hpp  BasicPipePropagator.cpp  BasicPipePropagator.hpp  CMakeLists.txt  LaxWendroff.cpp  LaxWendroff.hpp  PipeMethod.cpp  PipeMethod.hpp  PipeSolver.cpp  PipeSolver.hpp  TTubo.cpp  TTubo.h
Source/Act/: ACT_Sub_DLL.cpp  ACT_Sub_DLL.h  ACT_v_8_2.cpp  CMakeLists.txt  INJECTION_RATE.cpp  act_def.h
Source/Boundaries/: BoundaryFunctions.cpp  BoundaryFunctions.h  CMakeLists.txt  TCCCilindro.cpp  TCCCilindro.h  TCCCompresor.cpp  TCCCompresor.h  TCCCompresorVolumetrico.cpp  TCCCompresorVolumetrico.h  TCCDeposito.cpp  TCCDeposito.h  TCCDescargaExtremoAbierto.cpp  TCCDescargaExtremoAbierto.h  TCCEntradaCompresor.cpp  TCCEntradaCompresor.h  TCCExternalConnection.cpp  TCCExternalConnection.h  TCCExternalConnectionVol.cpp  TCCExternalConnectionVol.h  TCCExtremoAnecoico.cpp  TCCExtremoAnecoico.h  TCCExtremoCerrado.cpp  TCCExtremoCerrado.h  TCCExtremoInyeccion.cpp  TCCExtremoInyeccion.h  TCCPerdidadePresion.cpp  TCCPerdidadePresion.h  TCCPreVble.cpp  TCCPreVble.h  TCCPulso.cpp  TCCPulso.h  TCCRamificacion.cpp  TCCRamificacion.h  TCCUnionEntreDepositos.cpp  TCCUnionEntreDepositos.h  TCCUnionEntreTubos.cpp  TCCUnionEntreTubos.h  TCCValvula.cpp  TCCValvula.h  TCFDConnection.cpp  (+5 more)
Source/CheckXML/: CMakeLists.txt  CheckXML.cpp  CheckXML.h
Source/Concentric Pipe/: TConcentrico.h  TConcentricoDPF.h  TConcentricoTubos.h
Source/Connections/: CMakeLists.txt  TCDExterno.cpp  TCDExterno.h  TCDFijo.cpp  TCDFijo.h  TDiscoRotativo.cpp  TDiscoRotativo.h  TEstatorTurbina.cpp  TEstatorTurbina.h  TLamina.cpp  TLamina.h  TLumbrera.cpp  TLumbrera.h  TMariposa.cpp  TMariposa.h  TRotorTurbina.cpp  TRotorTurbina.h  TTipoValvula.cpp  TTipoValvula.h  TValvula4T.cpp  TValvula4T.h  TValvulaContr.cpp  TValvulaContr.h  TWasteGate.cpp  TWasteGate.h
Source/Control/: CMakeLists.txt  TController.cpp  TController.h  TDecisor.cpp  TDecisor.h  TGain.cpp  TGain.h  TPIDController.cpp  TPIDController.h  TSensor.cpp  TSensor.h  TTable.cpp  TTable.h  TTable1D.cpp  TTable1D.h
Source/DPF/: TCanalDPF.h  TDPF.h
Source/Engine/: CMakeLists.txt  TBloqueMotor.cpp  TBloqueMotor.h  TCilindro.cpp  TCilindro.h  TCilindro2T.cpp  TCilindro2T.h  TCilindro4T.cpp  TCilindro4T.h
Source/Includes/: CheckXML.h  Constantes.h  Eigen  Globales.h  Labels.rc  Math_wam.h  NewCompSolver.h  SolverCompresor.h  StringManagement.cpp  StringManagement.hpp  THTM_Fluids.h  fluids.h
Source/Labels/: CMakeLists.txt  labels.cpp  labels.hpp
Source/Math_wam/: CMakeLists.txt  Math_wam.cpp  Math_wam.h
Source/ODModels/: CMakeLists.txt  TAcousticTurbine.cpp  TAcousticTurbine.h  TDepVolCte.cpp  TDepVolCte.h  TDepVolCteBase.cpp  TDepVolCteBase.h  TDepVolVariable.cpp  TDepVolVariable.h  TDeposito.cpp  TDeposito.h  TIsoSpeedLine.cpp  TIsoSpeedLine.h  TTurbPosition.cpp  TTurbPosition.h  TTurbina.cpp  TTurbina.h  TTurbinaSimple.cpp  TTurbinaSimple.h  TTurbinaTwin.cpp  TTurbinaTwin.h  TTurbineMap.cpp  TTurbineMap.h  TUnionDireccional.cpp  TUnionDireccional.h  TVenturi.cpp  TVenturi.h
Source/Output/: CMakeLists.txt  TOutputResults.cpp  TOutputResults.h
Source/Turbocompressor/: CMakeLists.txt  TAcousticCompressor.cpp  TAcousticCompressor.h  TCompIsoReg.cpp  TCompIsoReg.h  TCompTubDep.cpp  TCompTubDep.h  TCompTubos.cpp  TCompTubos.h  TCompresor.cpp  TCompresor.h  TCompresorDep.cpp  TCompresorDep.h  TCompressorMap.cpp  TCompressorMap.h  TEffCorrector.cpp  TEffCorrector.h  TEjeTurbogrupo.cpp  TEjeTurbogrupo.h  TInterpMapaComp.cpp  TInterpMapaComp.h  TMapaComp.cpp  TMapaComp.h  TMapaComp2Tub.cpp  TMapaComp2Tub.h  TNewMapComp.cpp  TNewMapComp.h  TSAEMap.cpp  TSAEMap.h  TTC_HTM.h  turbo_bearings.hpp
Source/Units/: CMakeLists.txt  units.cpp  units.hpp
Source/Wrappers/: CMakeLists.txt  Exception.cpp  Exception.hpp  StringManagement.cpp  StringManagement.hpp
Source/pugixml/: CMakeLists.txt  pugixml.cpp  pugixml.hpp
