include_directories(../Act)
include_directories(../Boundaries)
include_directories(../CheckXML)
include_directories(../Control)
include_directories(../DPF)
include_directories(../Engine)
include_directories(../Includes)
include_directories(../Math_wam)
include_directories(../ODModels)
include_directories(../pugixml)
include_directories(../Wrappers)
add_library(1DPipes TTubo.cpp)
