include_directories(../1DPipes)
include_directories(../Act)
include_directories(../Boundaries)
include_directories(../Connections)
include_directories(../Control)
include_directories(../DPF)
include_directories(../Engine)
include_directories(../Includes)
include_directories(../Math_wam)
include_directories(../ODModels)
include_directories(../pugixml)
include_directories(../Wrappers)
add_library(
  Engine
  TBloqueMotor.cpp
  TCilindro.cpp
  TCilindro2T.cpp
  TCilindro4T.cpp
)
target_link_libraries(
  Engine
  Act
)
