include_directories(../1DPipes)
include_directories(../Act)
include_directories(../Boundaries)
include_directories(../CheckXML)
include_directories(../Control)
include_directories(../DPF)
include_directories(../Engine)
include_directories(../Includes)
include_directories(../Math_wam)
include_directories(../ODModels)
include_directories(../pugixml)
include_directories(../Turbocompressor)
include_directories(../Wrappers)
add_library(
  Turbocompressor
  TAcousticCompressor.cpp
  TCompIsoReg.cpp
  TCompresor.cpp
  TCompresorDep.cpp
  TCompressorMap.cpp
  TCompTubDep.cpp
  TCompTubos.cpp
  TEffCorrector.cpp
  TEjeTurbogrupo.cpp
  TInterpMapaComp.cpp
  TMapaComp.cpp
  TMapaComp2Tub.cpp
  TNewMapComp.cpp
  TSAEMap.cpp
  )
